Archive2/f7/b55a7ed42d3419/output
+ clang++ -std=c++11 -pedantic main.cpp
main.cpp:12:5: error: use of undeclared identifier 'foo'; did you mean 'N::foo'?
    foo(bar(N::S{}));
    ^~~
    N::foo
main.cpp:3:10: note: 'N::foo' declared here
    void foo(int) { }
         ^
1 error generated.
